# yuck

./: .gitignore  .travis.yml  GNUmakefile  Makefile.am  README.md  configure.ac  index.md  version.m4  xmpl-subcommands.html  yuck.pc.in
_layouts/: project.html
build-aux/: git-version-gen
info/: Makefile.am  author.h2m
m4/: clitoris.m4  git_version_magic.m4  sxe-compiler.m4  yuck.m4
snap/: snapcraft.yaml
src/: Makefile.am  beef-co.m4c  beef.c  beef.m4c  beef.m4i  test.c  test.yuck  version.c.in  version.h  yuck-coru.c.m4  yuck-coru.h.m4  yuck-coru.m4c  yuck-coru.m4h  yuck-custom.example.m4  yuck-scmver.c  yuck-scmver.h  yuck-scmver.m4  yuck-version.c  yuck-version.h  yuck.am  yuck.c  yuck.m4  yuck.m4man  yuck.man.m4  yuck.yuck
test/: Makefile.am  auto-dashdash.c  auto-dashdash.yuck  auto-dashdash_01.clit  auto-dashdash_02.clit  brack_01.clit  brack_01.yuck  brack_02.clit  brack_02.yuck  clitoris.am  clitoris.c  clitoris.ggo  dashdesc_01.clit  dashdesc_01.yuck  escape_01.clit  escape_01.yuck  escape_02.clit  escape_03.clit  escape_03.yuck  escape_04.clit  generic-mularg_01.clit  generic-mularg_02.clit  generic-mularg_03.clit  generic-mularg_04.clit  generic-muloptarg_01.clit  generic-muloptarg_02.clit  generic-muloptarg_03.clit  generic-muloptarg_04.clit  generic-optarg_01.clit  generic-optarg_02.clit  generic-optarg_03.clit  generic-optarg_04.clit  generic-option_01.clit  generic-option_02.clit  generic-option_03.clit  generic-option_04.clit  generic-option_05.clit  generic-option_06.clit  generic-option_07.clit  generic-option_08.clit  (+169 more)
